# Narzedzia_Wspierajace_Programowanie

./: README.md
00_Konfiguracja_srodowiska/: 00a_Konfiguracja_srodowiska.ipynb  00b_Kontenery.ipynb
02_Python_obrobka_danych/Smash/: checkfiles.sh  checkfiles2.sh
02_Python_obrobka_danych/Smash/run5/outdir/: particle_lists.oscar
02_Python_obrobka_danych/pliki/: dane0.txt  dane1.txt  dane10.txt  dane11.txt  dane13.txt  dane14.txt  dane19.txt  dane2.txt  dane5.txt  dane6.txt
04_Awk/: avg_age.awk  checkNparticles.awk
04_Python_obrobka_danych/: covid3.txt  python_serie_1.ipynb  python_serie_2.ipynb  wprowadzenie.ipynb
04_Python_obrobka_danych/.ipynb_checkpoints/: python_serie-checkpoint.ipynb
04_Python_obrobka_danych/Smash/run1/outdir/: particle_lists.oscar
04_Python_obrobka_danych/Smash/run2/outdir/: particle_lists.oscar
04_Python_obrobka_danych/Smash/run3/outdir/: particle_lists.oscar
04_Python_obrobka_danych/Smash/run4/outdir/: particle_lists.oscar
04_Python_obrobka_danych/pliki/: dane12.txt  dane15.txt  dane16.txt  dane17.txt  dane18.txt  dane3.txt  dane4.txt  dane7.txt  dane8.txt  dane9.txt
05_Pliki_obiektowe_Linkowanie/: complex.C
06_CMake/: README.md
06_CMake/1_Czesc-1_Podstawy/: README.md
06_CMake/1_Czesc-1_Podstawy/1_Przyklady/: README.md
06_CMake/1_Czesc-1_Podstawy/1_Przyklady/Przyklad-1/: CMakeLists.txt
06_CMake/1_Czesc-1_Podstawy/1_Przyklady/Przyklad-2/src/: class_b.cpp
06_CMake/1_Czesc-1_Podstawy/1_Przyklady/Przyklad-3/inc/: class_b.h
06_CMake/1_Czesc-1_Podstawy/1_Przyklady/Przyklad-4/: CMakeLists.txt
06_CMake/1_Czesc-1_Podstawy/1_Przyklady/Przyklad-5/: CMakeLists.txt
06_CMake/1_Czesc-1_Podstawy/1_Przyklady/Przyklad-5/inc/: class_b.h
06_CMake/1_Czesc-1_Podstawy/1_Przyklady/Przyklad-6/: CMakeLists.txt  main.cpp
06_CMake/1_Czesc-1_Podstawy/2_Cwiczenia/: README.md
06_CMake/1_Czesc-1_Podstawy/2_Cwiczenia/Cwiczenie-1/: README.md
06_CMake/1_Czesc-1_Podstawy/2_Cwiczenia/Cwiczenie-2/: README.md
06_CMake/2_Czesc-2_Zaawansowane/: README.md
06_CMake/2_Czesc-2_Zaawansowane/1_Przyklady/: README.md
06_CMake/2_Czesc-2_Zaawansowane/1_Przyklady/Przyklad-10/: CMakeLists.txt  README.md
06_CMake/2_Czesc-2_Zaawansowane/1_Przyklady/Przyklad-10/inc/: config.h.in
06_CMake/2_Czesc-2_Zaawansowane/1_Przyklady/Przyklad-10/src/: main.cpp
06_CMake/2_Czesc-2_Zaawansowane/1_Przyklady/Przyklad-11/: CMakeLists.txt
06_CMake/2_Czesc-2_Zaawansowane/1_Przyklady/Przyklad-11/app/: CMakeLists.txt
06_CMake/2_Czesc-2_Zaawansowane/1_Przyklady/Przyklad-11/app/src/: main.cpp
06_CMake/2_Czesc-2_Zaawansowane/1_Przyklady/Przyklad-11/lib/: CMakeLists.txt
06_CMake/2_Czesc-2_Zaawansowane/1_Przyklady/Przyklad-11/lib/inc/: lib.h
06_CMake/2_Czesc-2_Zaawansowane/1_Przyklady/Przyklad-11/lib/src/lib_f/: lib_f1.cpp  lib_f2.cpp  lib_f3.cpp  lib_f4.cpp  lib_f5.cpp
06_CMake/2_Czesc-2_Zaawansowane/1_Przyklady/Przyklad-11/lib/src/lib_g/: lib_g1.cpp  lib_g2.cpp  lib_g3.cpp  lib_g4.cpp  lib_g5.cpp
06_CMake/2_Czesc-2_Zaawansowane/1_Przyklady/Przyklad-12/: CMakeLists.txt
06_CMake/2_Czesc-2_Zaawansowane/1_Przyklady/Przyklad-12/cmake/: FindGit.cmake  FindPython.cmake  git_version.cmake  python_version.cmake  safeguards.cmake
06_CMake/2_Czesc-2_Zaawansowane/1_Przyklady/Przyklad-12/inc/: config.h.in
06_CMake/2_Czesc-2_Zaawansowane/1_Przyklady/Przyklad-12/src/: main.cpp
06_CMake/2_Czesc-2_Zaawansowane/1_Przyklady/Przyklad-7/: CMakeLists.txt
06_CMake/2_Czesc-2_Zaawansowane/1_Przyklady/Przyklad-7/app/: CMakeLists.txt
06_CMake/2_Czesc-2_Zaawansowane/1_Przyklady/Przyklad-7/inc/: class_a.h
06_CMake/2_Czesc-2_Zaawansowane/1_Przyklady/Przyklad-7/lib1/: CMakeLists.txt
06_CMake/2_Czesc-2_Zaawansowane/1_Przyklady/Przyklad-7/src/: main.cpp
06_CMake/2_Czesc-2_Zaawansowane/1_Przyklady/Przyklad-8/: CMakeLists.txt
06_CMake/2_Czesc-2_Zaawansowane/1_Przyklady/Przyklad-8/app/: CMakeLists.txt  main.cpp
06_CMake/2_Czesc-2_Zaawansowane/1_Przyklady/Przyklad-9/: CMakeLists.txt
06_CMake/2_Czesc-2_Zaawansowane/1_Przyklady/Przyklad-9/inc/: cf_a.h.in  cf_b.h.in
06_CMake/2_Czesc-2_Zaawansowane/1_Przyklady/Przyklad-9/src/: main.cpp
06_CMake/2_Czesc-2_Zaawansowane/2_Cwiczenia/: README.md
06_CMake/2_Czesc-2_Zaawansowane/2_Cwiczenia/Cwiczenie_3/: README.md
06_CMake/2_Czesc-2_Zaawansowane/2_Cwiczenia/Cwiczenie_4/: README.md
06_CMake/2_Czesc-2_Zaawansowane/2_Cwiczenia/Cwiczenie_5/: README.md
06_CMake/2_Czesc-2_Zaawansowane/2_Cwiczenia/Cwiczenie_podsumowujace/: README.md
06_CMake/Przyklad-1/: CMakeLists.txt  main.cpp
06_CMake/Przyklad-2/: CMakeLists.txt
06_CMake/Przyklad-3/: CMakeLists.txt
06_CMake/Przyklad-4/inc/: class_a.h
06_CMake/Przyklad-5/: CMakeLists.txt  main.cpp
06_CMake/Przyklad-7/: CMakeLists.txt
06_CMake/Przyklad-7/lib2/: CMakeLists.txt
06_CMake/Przyklad-7/lib3/: CMakeLists.txt
07_CMake/Przyklad-1/: CMakeLists.txt  main.cpp
07_CMake/Przyklad-2/: CMakeLists.txt
07_CMake/Przyklad-2/inc/: class_b.h
07_CMake/Przyklad-3/: CMakeLists.txt
07_CMake/Przyklad-3/src/: class_b.cpp
07_CMake/Przyklad-4/: CMakeLists.txt
07_CMake/Przyklad-4/src/: main.cpp
07_CMake/Przyklad-5/: CMakeLists.txt  main.cpp
07_CMake/Przyklad-6/: CMakeLists.txt  main.cpp
07_CMake/Przyklad-7/: CMakeLists.txt
07_CMake/Przyklad-7/app/: CMakeLists.txt  main.cpp
07_CMake/Przyklad-7/lib1/: CMakeLists.txt
07_CMake/Przyklad-7/lib1/inc/: lib1.h
07_CMake/Przyklad-7/lib1/src/: lib1.cpp
07_CMake/Przyklad-7/lib2/: CMakeLists.txt
07_CMake/Przyklad-7/lib2/inc/: lib2.h
07_CMake/Przyklad-7/lib2/src/: lib2.cpp
07_CMake/Przyklad-7/lib3/: CMakeLists.txt
07_CMake/Przyklad-7/lib3/inc/: lib3.h
09_AI/: 09_AI.ipynb
11_AI/: 11_AI.ipynb
D2_Pliki_obiektowe_Linkowanie/: complex.h  complex_client.C
Docker/: Dockerfile  README.md  runDocker_test.sh  start-jupyter.sh  test_packages.py
MathTools/: main.C  makefile  makefile2  makefile_final  makefile_step1  makefile_step2  makefile_step3
MathTools/includes/: Funkcja.h  Gauss.h  IntGauss.h  MathTools.h  Wielomian.h  Wymierna.h
MathTools/src/: Funkcja.C  Gauss.C  IntGauss.C  MathTools.C  Wielomian.C  Wymierna.C
(+17 files in other folders)
